bug: z-index

--- a/src/app/pages/project/project.component.css
+++ b/src/app/pages/project/project.component.css
@@ -26,6 +26,7 @@
 .thumb-img{
   padding: 1vh;
   box-shadow: -1px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  z-index: 10;
 }
 
 .showMore-button {
@@ -102,6 +103,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.params:after {  content:'   .......................................';
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .dot {
